added weather and stop alarm

--- a/templates/index.html
+++ b/templates/index.html
@@ -161,6 +161,7 @@
         </div>
 
         <!-- Save Button -->
+        <button id="stop-alarm">Stop Alarm</button>
         <button id="save-button">Save Schedule</button>
         <button id="trigger-test">Test Lights</button>
     </main>
